--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
   <dependencies>
 
     <dependency>
+      <groupId>net.datafaker</groupId>
+      <artifactId>datafaker</artifactId>
+      <version>1.5.0</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
